epserde/tests/fail/force_full_copy_with_args.stderr
error: "force_full_copy" is a field-level marker and takes no arguments; use #[epserde(force_full_copy)]
  --> tests/fail/force_full_copy_with_args.rs:13:15
   |
13 |     #[epserde(force_full_copy(T))]
   |               ^^^^^^^^^^^^^^^
